--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.12.1",
     "@types/react": "16.8.10",
+    "@types/react-color": "^3.0.0",
     "@types/react-dom": "16.8.3",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
