--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://maloua.github.io/fontastic",
   "dependencies": {
+    "@types/enzyme": "^3.9.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.12.1",
     "@types/react": "16.8.10",
     "@types/react-color": "^3.0.0",
     "@types/react-dom": "16.8.3",
+    "@types/sinon": "^7.0.11",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-color": "^2.17.0",
