--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/react": "16.8.10",
     "@types/react-color": "^3.0.0",
     "@types/react-dom": "16.8.3",
+    "@types/react-helmet": "^5.0.8",
     "@types/sinon": "^7.0.11",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "react-scripts": "2.1.8",
     "typescript": "3.3.4000"
   },
